--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
 	<head>
-		<title></title>
+		<title>브런치</title>
 	</head>
 	<body>
-		<section></section>
-		<header></header>
+		<header>
+			<h1>브런치 기능</h1>
+		</header>
+		<section>
+			<ul>
+				<li>브런치 만들기</li>
+				<li>브런치 병경하기</li>
+				<li>브런치 병합하기</li>
+			</ul>
+		</section>
 	</body>
 <html>
