--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<title>브런치</title>
+		<title>브런치란?</title>
 	</head>
 	<body>
 		<header>
-			<h1>브런치 기능</h1>
+			<h1>브런치 활용</h1>
 		</header>
 		<section>
 			<ul>
